--- a/src/components/imports/_base.scss
+++ b/src/components/imports/_base.scss
@@ -307,7 +307,7 @@ table {
     padding: math.div($base-sizing, 2);
   }
   th {
-    background-color: $purple;
+    background-color: $darkgrey;
     color: white;
     border: 1px solid darken($lightgrey, 6%);
     border-top: none;
