--- a/src/components/imports/_main.scss
+++ b/src/components/imports/_main.scss
@@ -1,5 +1,45 @@
 @use "sass:math";
-$white: $purple;
+
+.navbar {
+  background: #0d152e;
+  height: $base-sizing*3;
+  padding: math.div($base-sizing, 2) $base-sizing*2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  top: 0;
+
+  .navbar-brand {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      height: 75%;
+      width: 100%;
+    }
+  }
+
+  .links {
+    display: flex;
+    flex-direction: row;
+    gap: $base-sizing;
+    list-style-type: none;
+
+    a {
+      font-family: 'Cantarell', sans-serif;
+      font-weight: 800;
+      letter-spacing: .06em;
+      text-transform: uppercase;
+      color: white;
+      font-size: .6em;
+      text-decoration: none;
+    }
+  }
+}
 
 .hero, .section {
   background-color: $darkgrey;
@@ -13,18 +53,26 @@ $white: $purple;
 
 .hero {
   height: 100vh;
+  background-image: url('/bgwp-e1644425763180.webp');
+
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    padding: $base-sizing*2;
+
+    img {
+      min-width: $base-sizing*2;
+      flex: 1;
+    }
+  }
 
   &__text {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 2em;
-    
-    h1 {
-      color: white;
-    }
+    font-size: 1.2em;
+    flex: 1;
 
-    h3 {
-      font-size: 1.2em;
+    h1 {
+      font-family: 'Cantarell', sans-serif;
+      font-weight: 800;
     }
   }
 }
