--- a/src/components/imports/_base.scss
+++ b/src/components/imports/_base.scss
@@ -127,8 +127,7 @@ h6 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: $base-font-weight;
-  font-family: "Josefin Sans", sans-serif;
+  font-weight: 700;
 
   &.subheader {
     text-transform:uppercase;
