--- a/src/components/imports/_media.scss
+++ b/src/components/imports/_media.scss
@@ -4,4 +4,17 @@
 }
 
 @media only screen and (max-width: $on-mobile) {
+  .hero {
+    text-align: center;
+    font-size: .7em;
+
+    p {
+      font-size: 1.4em;
+      font-weight: 200;
+    }
+
+    &__wrapper {
+      flex-direction: column;
+    }
+  }
 }
