--- a/src/components/imports/_main.scss
+++ b/src/components/imports/_main.scss
@@ -1,5 +1,9 @@
 @use "sass:math";
 
+.vr {
+  margin-top: math.div($base-sizing, 2)
+}
+
 .bluetext {
   color: $lightblue;
   text-transform: uppercase;
@@ -20,6 +24,7 @@
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 1000;
 
   .navbar-brand {
     height: 100%;
@@ -99,10 +104,15 @@
     }
   }
 
+  &__color {
+    background-color: #101c3d
+  }
+
   &__horizontal {
     display: flex;
     flex-wrap: wrap;
     padding: $base-sizing*4 $base-sizing;
+    gap: $base-sizing;
 
     img {
       margin: 0 auto;
@@ -115,6 +125,122 @@
       padding: 0 $base-sizing;
       min-width: $base-sizing*15;
       flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
+  }
+}
+
+.btn {
+  background: linear-gradient(90deg,#00487d 0%,#0080c7 100%);
+  border-radius: 100px;
+  padding: 10px 40px;
+  color: white;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  width: max-content;
+  
+  svg {
+    height: math.div($base-sizing, 2);
+    fill: white;
+  }
+}
+
+.tabs-wrapper {
+  width: min(100vw, $base-sizing*35);
+  padding: $base-sizing;
+
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+}
+
+.nav-tabs {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+
+.tab {
+  padding: 10px 25px;
+  font-size: .8em;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-right: 0.5rem;
+  transition: all 0.3s ease 0s;
+  position: relative;
+}
+
+.tab.is-active {
+  background: linear-gradient(90deg,#00487d 0%,#0080c7 100%);
+  color: white;
+
+  &::before {
+    position: absolute;
+    left: 50%;
+    bottom: -24px;
+    content: "";
+    height: 10px;
+    width: 10px;
+    border: 2px solid $lightblue;
+    margin-left: -5px;
+    border-radius: 50%;
+  }
+
+  &::after {
+    position: absolute;
+    left: 50%;
+    bottom: -15px;
+    content: "";
+    height: 15px;
+    width: 1px;
+    background: $lightblue;
+  }
+}
+
+.tab-panel {
+  display: none;
+  background-color: $darkblue;
+  border-top: 3px solid $lightblue;
+  padding: $base-sizing*2;
+  width: 100%;
+  min-height: $base-sizing*15;
+  flex-wrap: wrap;
+  gap: $base-sizing;
+
+  &__img {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      height: auto;
+      width: 75%;
+      min-width: min($base-sizing*10, 35vw);
+    }
+  }
+
+  &__text {
+    flex: 1;
+    font-size: .9em;
+    line-height: 28px;
+    text-transform: none;
+    font-weight: 400;
+    color: #ccc;
+    font-size: 15px;
+
+    h1 {
+      font-size: 2em;
+      line-height: 1.2;
+    }
+  }
+
+  &.is-active {
+    display: flex;
   }
 }
