--- a/src/components/imports/_main.scss
+++ b/src/components/imports/_main.scss
@@ -273,6 +273,7 @@
     border-radius: 8px;
     overflow: hidden;
     background: #0d152e;
+    border: 1px solid rgba(255,255,255,.3);
 
     input {
       display: none;
@@ -289,10 +290,11 @@
       &:hover {
         background: darken(#0d152e, 10%);
       }
-      &::after {
-        content: "\276F";
-        width: 1em;
-        height: 1em;
+
+      svg {
+        fill: white;
+        width: $base-sizing;
+        height: $base-sizing;
         text-align: center;
         transition: all .35s;
       }
@@ -321,7 +323,7 @@
     input:checked {
       + .tab-label {
         //background: darken($midnight, 10%);
-        &::after {
+        svg {
           transform: rotate(90deg);
         }
       }
@@ -356,6 +358,25 @@
     color: white;
     font-size: .62em;
     text-decoration: none;
+    padding: math.div($base-sizing, 2) 0;
+
+    &:after {    
+      background: none repeat scroll 0 0 transparent;
+      bottom: 0;
+      content: "";
+      display: block;
+      height: 2px;
+      left: 50%;
+      position: absolute;
+      background: var(--text-color);
+      transition: width 0.3s ease 0s, left 0.3s ease 0s;
+      width: 0;
+    }
+
+    &:hover:after { 
+      width: 100%; 
+      left: 0; 
+    }
   }
 }
 
@@ -393,9 +414,74 @@
     bottom: 0;
     left: 0;
     opacity: .05;
+    z-index: -500;
   }
 }
 
 .force-break {
   word-break: break-all
+}
+
+.rectangular-shape {
+  position: relative;
+  z-index: 0;
+
+  &::after {
+    position: absolute;
+    right: 0;
+    bottom: 50px;
+    content: "";
+    height: 600px;
+    width: 600px;
+    background: #437eeb;
+    z-index: -1;
+    opacity: .08;
+    clip-path: polygon(50% 0,0 100%,100% 100%);
+    transform: rotate(90deg);
+  }
+}
+
+.social {
+  display: flex;
+  padding: 0;
+  gap: math.div($base-sizing, 2);
+
+  &__card {
+    height: $base-sizing*1.5;
+    width: $base-sizing*1.5;
+    border-radius: math.div($border-radius, 2);
+    background-color: white;
+    list-style-type: none;
+    
+    a {
+      padding: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+    }
+
+    svg {
+      fill: white;
+      width: 100%;
+      height: min-content;
+    }
+  }
+
+  .discord {
+    background-color: #7289da;
+  }
+
+  .twitter {
+    background-color: #1DA1F2
+  }
+
+  .pinterest {
+    background-color: #c8232c;
+  }
+
+  .youtube {
+    background-color: #FF0000
+  }
 }
