Fix footer links

--- a/src/components/style/imports/_main.scss
+++ b/src/components/style/imports/_main.scss
@@ -503,8 +503,8 @@
     background-color: #1DA1F2
   }
 
-  .pinterest {
-    background-color: #c8232c;
+  .medium {
+    background-color: #e65a3a;
   }
 
   .youtube {
