--- a/src/components/style/imports/_main.scss
+++ b/src/components/style/imports/_main.scss
@@ -69,7 +69,7 @@
 
 .hero {
   min-height: 100vh;
-  background-image: url("../img/assets/bgwp-e1644425763180.webp");
+  background-image: url("../img/assets/bgwp-e1644425763180.png");
   background-size: cover;
   background-attachment: fixed;
   padding: $base-sizing*3 0;
@@ -111,7 +111,7 @@
   }
 
   &__image {
-    background-image: url("../img/assets/bgwp-e1644425763180.webp");
+    background-image: url("../img/assets/bgwp-e1644425763180.png");
     background-size: cover;
     background-attachment: fixed;
   }
