--- a/src/components/style/imports/_settings.scss
+++ b/src/components/style/imports/_settings.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-$base-font-family: 'Cantarell', -apple-system, BlinkMacSystemFont, "Roboto", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: 'Corbel', -apple-system, BlinkMacSystemFont, "Roboto", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $base-font-size:   20px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
@@ -93,4 +93,9 @@ $parallax-ios         : true !default;
     scale(abs($distance - 1))
   ;
   z-index: $distance * 1000;
+}
+
+@font-face {
+  font-family: "Corbel";
+  src: url("/fonts/corbel/CORBEL.TTF") format("truetype");
 }
